# final_project_python_KostenkoSN_M25-555

./: .gitignore  README.md  constants.py  main.py  pyproject.toml
parse_service/: api_clients.py  config.py  updater.py
valutatrade_hub/cli/: interface.py
valutatrade_hub/core/: currencies.py  exceptions.py  models.py  usecases.py  utils.py
valutatrade_hub/infra/: settings.py
