[tool.poetry]
name = "finalproject-kostenko-sveta-m25-555"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
	{include = "valutatrade_hub"},
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "main:main" 
